<resources>
    <string name="app_name">Scanner</string>
    <string name="download_btn">Download</string>
    <string name="scan_button">Сканировать</string>
    <string name="show_button">Показать</string>
    <string name="txt_qantity_place">Количество накладных</string>
    <string name="txt_qantity">Количество мест</string>
    <string name="res">Осталось</string>
    <string name="btn_exit">ВЫХОД</string>
    <string name="image">TODO</string>
</resources>
